--- a/docker/nginx/http.d/default.conf
+++ b/docker/nginx/http.d/default.conf
@@ -24,10 +24,10 @@ server {
 
     # Project APP
     location / {
-        proxy_set_header Host Shosit;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For Sproxy_add_X_forwarded_for;
-        proxy_set_header X-Forwarded-Proto §scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Host $host;
         index index.php;
