--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -90,9 +90,13 @@ http {
 
 
 	# Specifies the main log format.
-	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-			'$status $body_bytes_sent "$http_referer" '
-			'"$http_user_agent" "$http_x_forwarded_for"';
+# 	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+# 			'$status $body_bytes_sent "$http_referer" '
+# 			'"$http_user_agent" "$http_x_forwarded_for"';
+
+    log_format main '$http_x_forwarded_for - $remote_user [$time_local] '
+            '"$request" $status $body_bytes_sent '
+            '"$http_referer" "$http_user_agent"';
 
 	# Sets the path, format, and configuration for a buffered log write.
 	access_log /dev/stdout main;
