--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -89,18 +89,24 @@ http {
 	}
 
 
-	# Specifies the main log format.
-# 	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-# 			'$status $body_bytes_sent "$http_referer" '
-# 			'"$http_user_agent" "$http_x_forwarded_for"';
+	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+			'$status $body_bytes_sent "$http_referer" '
+			'"$http_user_agent" "$http_x_forwarded_for"';
 
-    log_format main '$http_x_forwarded_for - $remote_user [$time_local] '
-            '"$request" $status $body_bytes_sent '
-            '"$http_referer" "$http_user_agent"';
+	# Specifies the main log format.
+	log_format with_header '$remote_addr - $remote_user [$time_local] "$request" '
+			'$status $body_bytes_sent "$http_referer" '
+			'"$http_user_agent" "$http_x_forwarded_for"';
+
+     log_format real_ip '$http_x_real_ip - $remote_user [$time_local] '
+         '"$request" $status $body_bytes_sent '
+         '"$http_referer" "$http_user_agent"';
 
 	# Sets the path, format, and configuration for a buffered log write.
 	access_log /dev/stdout main;
-
+	access_log /dev/stdout with_header;
+	access_log /dev/stdout real_ip;
+    error_log /dev/stdout info;
 
 	# Includes virtual hosts configs.
 	include /etc/nginx/http.d/*.conf;
