--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -9,7 +9,7 @@ worker_processes auto;
 pcre_jit on;
 
 # Configures default error logger.
-error_log /dev/stdout warn;
+error_log /dev/stdout crit;
 
 # Includes files with directives to load dynamic modules.
 include /etc/nginx/modules/*.conf;
@@ -94,7 +94,6 @@ http {
 
 	# Sets the path, format, and configuration for a buffered log write.
 	access_log /dev/stdout main;
-    error_log /dev/stdout info;
 
 	# Includes virtual hosts configs.
 	include /etc/nginx/http.d/*.conf;
